--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,24 @@
+:root {
+    --main-background: #1d2731;
+    --second-background: #0b3c5d;
+    --skyblue: #328cc1;
+    --gold-color: #d9b310;
+    --white-color: #FFFAFA;
+}
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    background-color: #020803;
+    background-color: var(--main-background);
+    color: var(--white-color);
+}
+
+body{
+    min-width: 100vw;
+    min-height: 100vh;
+    background-color: var(--main-background);
+    color: var(--white-color);
+}
+h1{
+    text-align: center;
 }
