--- a/styles.css
+++ b/styles.css
@@ -15,8 +15,9 @@
 }
 
 body{
-    min-width: 100vw;
+    
     min-height: 100vh;
+    max-width: 100vw;
     background-color: var(--main-background);
     color: var(--white-color);
 }
