--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,5 @@
+/* --- Variables --- */
+
 :root {
     --main-background: #1d2731;
     --second-background: #0b3c5d;
@@ -6,11 +8,22 @@
     --white-color: #FAFAFA;
     --grey-color: #abb4bb;
 }
+
+/* --- Colores --- */
+
+.span-grey{
+    color: var(--grey-color);
+}
+.span-gold{
+    color: var(--gold-color);
+}
+
+/* --- Estilos --- */
+
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    background-color: var(--main-background);
     color: var(--white-color);
 }
 
@@ -19,18 +32,17 @@ body{
     min-height: 100vh;
     max-width: 100vw;
     background-color: var(--main-background);
+    /*background: rgb(50,140,193);*/
+    background: linear-gradient(0deg, rgba(50,140,193,1) 0%, rgba(11,60,93,1) 40%, rgba(29,39,49,1) 100%);
     color: var(--white-color);
 }
-.span-grey{
-    color: var(--grey-color);
-}
-.span-gold{
-    color: var(--gold-color);
+
+footer{
+    background: rgb(50,140,193);
+    background: linear-gradient(0deg, rgba(50,140,193,0.5) 0%, rgba(11,60,93,1) 7%, rgba(29,39,49,1) 100%);
 }
 
-footer p, footer i, footer a, footer{
-    background-color: var(--second-background);
-}
+/* ---- Media Queries --- */
 
 @media only screen and (min-width: 770px) {
     .main-container{
@@ -38,15 +50,31 @@ footer p, footer i, footer a, footer{
         justify-content: center;
     }
 
-    .lateral-izq h1, .lateral-izq h4{
-        margin-top: 1.4rem;
+    h1{
+        padding-top: 1.2rem;
     }
 
-    .lateral-izq img, .lateral-izq h1{
+    .lateral-izq{
+        align-items: center;
+        background: rgb(50,140,193);
+        background: linear-gradient(90deg,rgba(11,60,93,1) 100%, rgba(29,39,49,1) 100%);
+    }
+
+    .lateral-izq h4{
+        margin-top: 0.2rem;
+    }
+
+    .lateral-izq img{
         margin-bottom: 1rem;
     }
     .lateral-izq hr{
         display: none;
+    }
+
+    .lateral-der{
+        background: var(--main-background);
+        background: linear-gradient(270deg,rgba(11,60,93,1) 0%, rgba(29,39,49,1) 100%);
+        border-top-right-radius: 4%;
     }
 }
 
